# plashspeed

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
biology-notes/: plash.toml
hello/: index.dj
hello/notes/: index.dj
notes-example/src/: index.dj
notes-example2/src/bio/: emia.dj  mito.dj
src/: app.ts  config.rs  index.ts  lib.rs  main.rs  main.ts  notes.rs  old.ts
src/cli/: cli.ts  program.ts
src/db/: cards.ts
src/djot/: README.dj  attributes.ts  block.ts  djot-renderer.ts  filter.ts  html.ts  index.ts  inline.ts  options.ts  pandoc.ts  parse.ts
src/notes/: index.dj  init.rs  mod.rs  notes.ts
src/renderer/: build.rs
src/server/: server.ts
src/site/: assets.ts  cards.ts  site.ts
src/utils/: errors.ts  pathing.ts
tests/: notes_test.ts
