[package]
name = "plashspeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
jotdown = "0.1.0"
walkdir = "2"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
